--- a/src/Components/Table/Table.module.scss
+++ b/src/Components/Table/Table.module.scss
@@ -1,8 +1,16 @@
-.TableWrapper {
-
-
+.Table {
+  position: relative;
+  .TableHead {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: white;
+  }
 }
 
-.TableROw {
+.TableRow {
   display: flex;
+}
+.ToggleRowOpen {
+  width: 32px;
 }
