--- a/src/Components/Table/Table.module.scss
+++ b/src/Components/Table/Table.module.scss
@@ -1,3 +1,5 @@
+$row-height: 50px;
+
 .Table {
   position: relative;
   .TableHead {
@@ -10,6 +12,18 @@
 
 .TableRow {
   display: flex;
+  min-height: $row-height;
+  align-items: center;
+  border-bottom: 1px solid #e0e0e0;
+}
+.TableCell {
+    padding: 0 16px;
+    &:first-child {
+        padding-left: 24px;
+    }
+    &:last-child {
+        padding-right: 24px;
+    }
 }
 .ToggleRowOpen {
   width: 32px;
