add material ui components

--- a/src/Components/Table/Table.module.scss
+++ b/src/Components/Table/Table.module.scss
@@ -28,3 +28,11 @@ $row-height: 50px;
 .ToggleRowOpen {
   width: 32px;
 }
+.EditableCell {
+  display: flex;
+    align-items: center;
+}
+.EditableCellInput {
+  flex: 1;
+  width: 0;
+}
