--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,29 @@
 .App {
   font-family: "Roboto", sans-serif;
+  padding: 16px;
+}
+.layout-align-y {
+  display: flex;
+  align-items: center;
+}
+.gap-1 {
+  gap: 4px;
+}
+.gap-2 {
+  gap: 8px;
+}
+.gap-3 {
+  gap: 12px;
+}
+.gap-4 {
+  gap: 16px;
+}
+.gap-5 {
+  gap: 20px;
+}
+.gap-6 {
+  gap: 24px;
+}
+.gap-7 {
+  margin: 28px;
 }
