table drawer style

--- a/src/Components/Table/Table.module.scss
+++ b/src/Components/Table/Table.module.scss
@@ -36,3 +36,8 @@ $row-height: 50px;
   flex: 1;
   width: 0;
 }
+.TableDrawer {
+  background-color: #eef6ff;
+  padding: 30px 4px 40px;
+  box-shadow: -8px 192px 15px -196px rgba(0,0,30,0.15) inset;
+}
