move app to its own component; it's data be received from props instead of temp consts

--- a/src/EnhancedTable/EnhancedTable.scss
+++ b/src/EnhancedTable/EnhancedTable.scss
@@ -1,12 +1,12 @@
-body {
-  font-family: "Roboto", sans-serif;
-}
+// global styles
 * {
     box-sizing: border-box;
 }
-.App {
+.EnhancedTable {
   padding: 16px;
+  font-family: "Roboto", sans-serif;
 }
+
 .layout-align-y {
   display: flex;
   align-items: center;
